# wordgen

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  wordgen.1  wordgen.c
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makevars  POTFILES.in  wordgen.pot
